# kargo

./: .gitignore  Cargo.toml  README.md
.cursor/rules/: ap-smoke-tests.mdc  commit-style.mdc  crate-architecture.mdc  kargo-toml.mdc  maven-compat.mdc  rust-conventions.mdc  testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/kargo-cli/: Cargo.toml
crates/kargo-cli/src/: cli.rs  main.rs
crates/kargo-cli/src/commands/: add.rs  audit.rs  build.rs  cache.rs  check.rs  clean.rs  env.rs  fetch.rs  init.rs  lock.rs  mod.rs  new.rs  outdated.rs  remove.rs  run.rs  self_.rs  test_.rs  toolchain.rs  tree.rs  update.rs  watch.rs
crates/kargo-cli/tests/: cli_clean.rs  cli_env.rs  cli_new.rs  cli_self.rs  cli_toolchain.rs
crates/kargo-compiler/: Cargo.toml
crates/kargo-compiler/src/: build_cache.rs  buildconfig.rs  classpath.rs  compose.rs  dispatch.rs  env.rs  fingerprint.rs  incremental.rs  job_queue.rs  kotlinc.rs  kotlinc_js.rs  kotlinc_native.rs  lib.rs  plugins.rs  source_set_discovery.rs  source_set_hierarchy.rs  unit.rs  unit_graph.rs
crates/kargo-compiler/src/plugins/: kapt.rs  ksp.rs  mod.rs
crates/kargo-core/: Cargo.toml
crates/kargo-core/src/: config.rs  dependency.rs  flavor.rs  lib.rs  lockfile.rs  manifest.rs  package.rs  profile.rs  properties.rs  source_set.rs  target.rs  template.rs  version_catalog.rs  workspace.rs
crates/kargo-core/templates/: android.toml  cmp.toml  jvm.toml  kmp.toml  lib.toml
crates/kargo-core/tests/: config.rs  dependency.rs  flavor.rs  lockfile.rs  manifest_interpolation.rs  manifest_parsing.rs  manifest_unit.rs  profile.rs  properties_integration.rs  properties_unit.rs  source_set.rs  target.rs  template.rs  version_catalog.rs  workspace.rs
crates/kargo-lint/: Cargo.toml
crates/kargo-lint/src/: config.rs  formatter.rs  lib.rs  linter.rs
crates/kargo-lint/src/rules/: complexity.rs  mod.rs  naming.rs  style.rs
crates/kargo-maven/: Cargo.toml
crates/kargo-maven/src/: auth.rs  cache.rs  checksum.rs  download.rs  lib.rs  metadata.rs  pom.rs  publish.rs  repository.rs
crates/kargo-ops/: Cargo.toml
crates/kargo-ops/src/: lib.rs  ops_add.rs  ops_audit.rs  ops_build.rs  ops_cache.rs  ops_check.rs  ops_clean.rs  ops_fetch.rs  ops_init.rs  ops_lock.rs  ops_new.rs  ops_outdated.rs  ops_remove.rs  ops_run.rs  ops_self.rs  ops_self_update.rs  ops_setup.rs  ops_test.rs  ops_toolchain.rs  ops_tree.rs  ops_update.rs
crates/kargo-plugin/: Cargo.toml
crates/kargo-plugin/src/: api.rs  hooks.rs  lib.rs  loader.rs  registry.rs  sandbox.rs
crates/kargo-resolver/: Cargo.toml
crates/kargo-resolver/src/: cache.rs  conflict.rs  graph.rs  lib.rs  resolver.rs  version.rs
crates/kargo-toolchain/: Cargo.toml
crates/kargo-toolchain/src/: discovery.rs  download.rs  install.rs  lib.rs  sdk.rs  version.rs
crates/kargo-toolchain/src/sdk/: android.rs  jdk.rs  mod.rs  xcode.rs
crates/kargo-toolchain/tests/: discovery.rs  install.rs  version.rs
crates/kargo-util/: Cargo.toml
crates/kargo-util/src/: errors.rs  fs.rs  hash.rs  lib.rs  process.rs  progress.rs
crates/kargo-util/tests/: errors.rs  fs.rs  hash.rs  process.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USER_GUIDE.md
tests/fixtures/: invalid-missing-name.toml  kmp-compose.toml  simple-jvm.toml  test.kargo.env  with-catalog.toml  with-flavors.toml
tests/projects/jvm-sample/: Kargo.toml
tests/projects/jvm-sample/src/main/kotlin/com/example/: Main.kt
tests/projects/jvm-sample/src/main/resources/: application.properties
tests/projects/jvm-sample/src/test/kotlin/com/example/: MainTest.kt
tests/projects/kapt-sample/: .gitignore  Kargo.toml
tests/projects/kapt-sample/src/main/kotlin/com/example/: Main.kt
tests/projects/kapt-sample/src/main/kotlin/com/example/di/: AppComponent.kt  AppModule.kt
tests/projects/kapt-sample/src/main/kotlin/com/example/service/: GreetingService.kt
tests/projects/ksp-sample/: Kargo.toml
tests/projects/ksp-sample/src/main/kotlin/com/example/: Main.kt
tests/projects/ksp-sample/src/main/kotlin/com/example/config/: AppConfig.kt
tests/projects/ksp-sample/src/main/kotlin/com/example/di/: AppModule.kt
tests/projects/ksp-sample/src/main/kotlin/com/example/model/: GitHubRepo.kt  GitHubSearchResponse.kt
tests/projects/ksp-sample/src/main/kotlin/com/example/service/: GitHubService.kt
tests/projects/ksp-sample/src/main/resources/: application.properties
tests/projects/ksp-sample/src/test/kotlin/com/example/: GitHubRepoTest.kt  KoinModuleTest.kt
