[package]
name = "kargo-cli"
description = "Kargo CLI binary: command-line interface for the Kargo Kotlin build tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kargo"
path = "src/main.rs"

[dependencies]
kargo-ops.workspace = true
kargo-core.workspace = true
kargo-util.workspace = true
clap.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
console.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
