[package]
name = "kargo-core"
description = "Core data types for Kargo: manifest parsing, packages, workspaces, targets, source sets, dependencies, profiles, flavors, variants, lockfiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kargo-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
