[package]
name = "kargo-toolchain"
description = "Kotlin toolchain management: compiler auto-download, version switching, JDK discovery, SDK detection (Xcode, Android SDK)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kargo-util.workspace = true
reqwest.workspace = true
tokio.workspace = true
semver.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
tempfile.workspace = true
