[package]
name = "kargo-util"
description = "Shared utilities for the Kargo build tool: error types, FS helpers, process spawning, hashing, TOML helpers, progress UI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
sha2.workspace = true
md-5.workspace = true
indicatif.workspace = true
console.workspace = true
tempfile.workspace = true
globset.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
